Fixed overflow for text. Added media query to make site responsive for mobile screens

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,10 +1,6 @@
-.card {
-  width: 413px;
-}
-
 .card__image {
   height: 413px;
-  width: 413px;
+  width: 100%;
   border-radius: 8px;
   object-fit: cover;
   display: block;
@@ -25,6 +21,10 @@
   line-height: 1.2;
   font-weight: 500;
   color: #212121;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 352px;
 }
 
 .card__like-button {
@@ -41,4 +41,25 @@
 .card__like-button:hover {
   opacity: 1;
   cursor: pointer;
+}
+
+@media screen and (max-width: 627px) {
+  .card__image {
+    height: 288px;
+  }
+
+  .card__title {
+    font-size: 16px;
+  }
+
+  .card__like-button {
+    background-image: url(../images/like_icon_small.svg);
+    width: 20px;
+    height: 18px;
+    opacity: 1;
+  }
+
+  .card__title {
+    max-width: 260px;
+  }
 }
